# sound

./: .gitignore  AGENTS.md  OMR-EXTRACTION.md  README.md  STUDIO-SETUP.md  arrange-band.py  make-score.py  mix-studio.py  render.sh  uf-gozal-band.midi  uf-gozal-v2.ly
omr/: hi-1.musicxml  hi-2.musicxml  main.py  pyproject.toml
