[project]
name = "oof-omr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.3",
    "music21>=10.5.0",
    "numpy>=2.4.6",
    "oemer>=0.1.8",
    "onnxruntime>=1.27.0",
    "opencv-python-headless<5",
    "pedalboard>=0.9.24",
    "pillow>=12.3.0",
    "scipy>=1.17.1",
]

[tool.uv]
override-dependencies = ["onnxruntime-gpu ; sys_platform == 'nonexistent'"]
